fixed sidebar overflow

--- a/static/dashboard/sidebar/css/sidebar.css
+++ b/static/dashboard/sidebar/css/sidebar.css
@@ -1,11 +1,13 @@
 /* Sidebar */
 #sidebar-wrapper {
     z-index: 1;
-    position: fixed;
-    width: 200px;
-    height: 100vh;
+    position: absolute;
+    width: 250px;
+    height: 99vh;
     margin-left: 10px;
-    overflow-y: hidden;
+    padding-right: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
     transition: 0.3s;
 }
 
@@ -13,13 +15,17 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding-left: 210px;
+    padding-left: 260px;
     transition: 0.3s;
+    
 }
 
 /* Change the width of the sidebar to display it */
 #wrapper.menuDisplayed #sidebar-wrapper {
     width: 0;
+    padding-right: 0px;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #wrapper.menuDisplayed #page-content-wrapper {
@@ -154,11 +160,11 @@
 }
 
 .newtask-icon {
-    width: 110px;
-    height: 110px;
-    left: 45px;
-    top: 133px;
-    position: absolute;
+    width: 100%;
+    height: 120px;
+    top: 15px;
+    position: relative;
+
 }
 
 .sidebar-add-task-guest {
@@ -265,7 +271,7 @@
 }
 
 .dropdown-menu-user {
-    transform: translate(215px, 8px) !important;
+    transform: translate(255px, 8px) !important;
     border: 3px solid #157d83;
     padding-top: 0;
     padding-bottom: 0;
@@ -325,7 +331,7 @@ li.account-dropdown-item {
 }
 
 .dropdown-menu-guest {
-    transform: translate(215px, 8px) !important;
+    transform: translate(210px, 8px) !important;
     border: 3px solid #157d83;
     padding-top: 0;
     padding-bottom: 0;
