--- a/static/task/css/task.css
+++ b/static/task/css/task.css
@@ -10,6 +10,7 @@
 .task-col {
     overflow-y: scroll;
     height: 85vh;
+    padding: 0 10px 0 10px;
 }
 
 .task {
